Multiple changes made to make the project compatable  for Pega 8.3 Changes to be committed: modified:   PegaPRPC-WebApp/Dockerfile  >> Optimize Dockerfile to have fewer commands, and generic commands to tolerate missing .war files modified:   PegaPRPC-WebApp/resources/context.xml.tmpl  >> Modified to work for Pega 8.3. Added rules & data schema modified:   Postgresql-BackendDB/docker-entrypoint-initdb.d/50-restoredata.sh  >> Modified to work for Pega 8.3. Search path modified to use pega 8.3 restore dump tables modified:   docker-compose.yml  >> Modified to have generic pega name instead of Pega721

--- a/PegaPRPC-WebApp/resources/context.xml.tmpl
+++ b/PegaPRPC-WebApp/resources/context.xml.tmpl
@@ -13,7 +13,6 @@
 		url="{{ .Env.JDBC_URL }}"
 		username="{{ .Env.SECRET_DB_USERNAME }}"
 		password="{{ .Env.SECRET_DB_PASSWORD }}"
-		minActive="{{ .Env.JDBC_MIN_ACTIVE }}"
 		maxActive="{{ .Env.JDBC_MAX_ACTIVE }}"
 		minIdle="{{ .Env.JDBC_MIN_IDLE }}"
 		maxIdle="{{ .Env.JDBC_MAX_IDLE }}"
@@ -21,5 +20,10 @@
         initialSize="{{ .Env.JDBC_INITIAL_SIZE }}"
         connectionProperties="{{ .Env.JDBC_CONNECTION_PROPERTIES }}"
 	/>
+
+  <Environment name="prconfig/database/databases/PegaRULES/defaultSchema" value="rules" type="java.lang.String" />
+  <Environment name="prconfig/database/databases/PegaDATA/defaultSchema" value="data" type="java.lang.String" />
+  
 </Context>   
+
 
